{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 450,
  "lineage": "82829c0c-ed9e-1cbf-9ee3-60963bc3eab6",
  "resources": [
    {
      "module": "module.sprints-vpc-1",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw-terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:244282014725:internet-gateway/igw-0aa0d64a5b648fe0d",
            "id": "igw-0aa0d64a5b648fe0d",
            "owner_id": "244282014725",
            "tags": {
              "Name": "gw-terraform"
            },
            "tags_all": {
              "Name": "gw-terraform"
            },
            "vpc_id": "vpc-028f6c723026932b4"
          },
          "dependencies": [
            "module.sprints-vpc-1.aws_vpc.vpc-terraform"
          ]
        }
      ]
    },
    {
      "module": "module.sprints-vpc-1",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route-terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:244282014725:route-table/rtb-0d8e086bc04a752d1",
            "id": "rtb-0d8e086bc04a752d1",
            "owner_id": "244282014725",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0aa0d64a5b648fe0d",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "route-terraform"
            },
            "tags_all": {
              "Name": "route-terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-028f6c723026932b4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sprints-vpc-1.aws_internet_gateway.gw-terraform",
            "module.sprints-vpc-1.aws_vpc.vpc-terraform"
          ]
        }
      ]
    },
    {
      "module": "module.sprints-vpc-1",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route-terraform-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:244282014725:route-table/rtb-02dd626f2de127edb",
            "id": "rtb-02dd626f2de127edb",
            "owner_id": "244282014725",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "private-route-table"
            },
            "tags_all": {
              "Name": "private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-028f6c723026932b4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sprints-vpc-1.aws_vpc.vpc-terraform"
          ]
        }
      ]
    },
    {
      "module": "module.sprints-vpc-1",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04f31e5e2140de560",
            "route_table_id": "rtb-02dd626f2de127edb",
            "subnet_id": "subnet-00067a719801e8562"
          },
          "dependencies": [
            "module.sprints-vpc-1.aws_route_table.route-terraform-private",
            "module.sprints-vpc-1.aws_subnet.subnet-terraform",
            "module.sprints-vpc-1.aws_vpc.vpc-terraform"
          ]
        }
      ]
    },
    {
      "module": "module.sprints-vpc-1",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_association-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00d95983831198f79",
            "route_table_id": "rtb-02dd626f2de127edb",
            "subnet_id": "subnet-013987b765a4c0738"
          },
          "dependencies": [
            "module.sprints-vpc-1.aws_route_table.route-terraform-private",
            "module.sprints-vpc-1.aws_subnet.subnet-terraform",
            "module.sprints-vpc-1.aws_vpc.vpc-terraform"
          ]
        }
      ]
    },
    {
      "module": "module.sprints-vpc-1",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "sub-ass-terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d1535ae0c7fdd537",
            "route_table_id": "rtb-0d8e086bc04a752d1",
            "subnet_id": "subnet-0d0010a17562bf22f"
          },
          "dependencies": [
            "module.sprints-vpc-1.aws_internet_gateway.gw-terraform",
            "module.sprints-vpc-1.aws_route_table.route-terraform",
            "module.sprints-vpc-1.aws_subnet.subnet-terraform",
            "module.sprints-vpc-1.aws_vpc.vpc-terraform"
          ]
        }
      ]
    },
    {
      "module": "module.sprints-vpc-1",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "sub-ass-terraform-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-033813fb5e7a94a5b",
            "route_table_id": "rtb-0d8e086bc04a752d1",
            "subnet_id": "subnet-08083b58eabacef6b"
          },
          "dependencies": [
            "module.sprints-vpc-1.aws_internet_gateway.gw-terraform",
            "module.sprints-vpc-1.aws_route_table.route-terraform",
            "module.sprints-vpc-1.aws_subnet.subnet-terraform",
            "module.sprints-vpc-1.aws_vpc.vpc-terraform"
          ]
        }
      ]
    },
    {
      "module": "module.sprints-vpc-1",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "terraform-securityG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:244282014725:security-group/sg-028f8f671f29d899b",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-028f8f671f29d899b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Flask_app from VPC",
                "from_port": 30000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 32700
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Flask_app from VPC",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Http from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Jenkins from VPC",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-securityG2023100111040868080000000d",
            "name_prefix": "terraform-securityG",
            "owner_id": "244282014725",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terraform-securityG"
            },
            "tags_all": {
              "Name": "terraform-securityG"
            },
            "timeouts": null,
            "vpc_id": "vpc-028f6c723026932b4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sprints-vpc-1.aws_vpc.vpc-terraform"
          ]
        }
      ]
    },
    {
      "module": "module.sprints-vpc-1",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "terraform-securityG-privateInstance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:244282014725:security-group/sg-0822510618ca9b0a5",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0822510618ca9b0a5",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "terraform-securityG-privateInstance2023100111040867310000000b",
            "name_prefix": "terraform-securityG-privateInstance",
            "owner_id": "244282014725",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terraform-securityG-privateInstance"
            },
            "tags_all": {
              "Name": "terraform-securityG-privateInstance"
            },
            "timeouts": null,
            "vpc_id": "vpc-028f6c723026932b4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sprints-vpc-1.aws_vpc.vpc-terraform"
          ]
        }
      ]
    },
    {
      "module": "module.sprints-vpc-1",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "private-2-subnet-terraform",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:244282014725:subnet/subnet-013987b765a4c0738",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-013987b765a4c0738",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "244282014725",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-2-subnet-terraform"
            },
            "tags_all": {
              "Name": "private-2-subnet-terraform"
            },
            "vpc_id": "vpc-028f6c723026932b4"
          },
          "dependencies": [
            "module.sprints-vpc-1.aws_vpc.vpc-terraform"
          ]
        },
        {
          "index_key": "private-subnet-terraform",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:244282014725:subnet/subnet-00067a719801e8562",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00067a719801e8562",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "244282014725",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-terraform"
            },
            "tags_all": {
              "Name": "private-subnet-terraform"
            },
            "vpc_id": "vpc-028f6c723026932b4"
          },
          "dependencies": [
            "module.sprints-vpc-1.aws_vpc.vpc-terraform"
          ]
        },
        {
          "index_key": "public-2-subnet-terraform",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:244282014725:subnet/subnet-08083b58eabacef6b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08083b58eabacef6b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "244282014725",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-2-subnet-terraform"
            },
            "tags_all": {
              "Name": "public-2-subnet-terraform"
            },
            "vpc_id": "vpc-028f6c723026932b4"
          },
          "dependencies": [
            "module.sprints-vpc-1.aws_vpc.vpc-terraform"
          ]
        },
        {
          "index_key": "public-subnet-terraform",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:244282014725:subnet/subnet-0d0010a17562bf22f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d0010a17562bf22f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "244282014725",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-terraform"
            },
            "tags_all": {
              "Name": "public-subnet-terraform"
            },
            "vpc_id": "vpc-028f6c723026932b4"
          },
          "dependencies": [
            "module.sprints-vpc-1.aws_vpc.vpc-terraform"
          ]
        }
      ]
    },
    {
      "module": "module.sprints-vpc-1",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc-terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:244282014725:vpc/vpc-028f6c723026932b4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0129b2682579186c1",
            "default_route_table_id": "rtb-0d6c9e395ec8cb47a",
            "default_security_group_id": "sg-0677ccdfd4e7a1d39",
            "dhcp_options_id": "dopt-08a7803967749cf45",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-028f6c723026932b4",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d6c9e395ec8cb47a",
            "owner_id": "244282014725",
            "tags": {
              "Name": "vpc-terraform"
            },
            "tags_all": {
              "Name": "vpc-terraform"
            }
          }
        }
      ]
    },
    {
      "module": "module.terraform-eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "terraform-security-EKS_port",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:244282014725:security-group/sg-09cfeb0416a5d65b5",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09cfeb0416a5d65b5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Flask_app from VPC",
                "from_port": 30000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 32700
              }
            ],
            "name": "terraform-security-EKS_port2023100111040867400000000c",
            "name_prefix": "terraform-security-EKS_port",
            "owner_id": "244282014725",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terraform-security-EKS_port"
            },
            "tags_all": {
              "Name": "terraform-security-EKS_port"
            },
            "timeouts": null,
            "vpc_id": "vpc-028f6c723026932b4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sprints-vpc-1.aws_vpc.vpc-terraform"
          ]
        }
      ]
    },
    {
      "module": "module.terraform-instance-Provisioned",
      "mode": "managed",
      "type": "aws_instance",
      "name": "terraform-instance-Provisioned",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-053b0d53c279acc90",
            "arn": "arn:aws:ec2:us-east-1:244282014725:instance/i-004bc63a3541d8272",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-004bc63a3541d8272",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "Sprints-Key-pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-074a0f949b09b70d5",
            "private_dns": "ip-10-0-2-9.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.9",
            "public_ip": "44.200.237.206",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c2e3212295fab98c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08083b58eabacef6b",
            "tags": {
              "Name": "terraform-instance-Provisioned"
            },
            "tags_all": {
              "Name": "terraform-instance-Provisioned"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-028f8f671f29d899b"
            ]
          },
          "dependencies": [
            "module.sprints-vpc-1.aws_security_group.terraform-securityG",
            "module.sprints-vpc-1.aws_subnet.subnet-terraform",
            "module.sprints-vpc-1.aws_vpc.vpc-terraform",
            "module.terraform-instance-Provisioned.data.aws_ami.latest_ubuntu"
          ]
        }
      ]
    }
  ]
}